# trustive-works-invoice

./: .gitignore  README.md  render.yaml
.github/workflows/: ci.yml
apps/api/: .dockerignore  .env.example  Dockerfile  main.py  pyproject.toml  requirements.txt
apps/api/core/: auth.py  config.py  sentry.py.example
apps/api/routers/: health.py  pdf.py
apps/api/schemas/: models.py
apps/api/services/: ai_classifier.py  classifier.py  pdf_parser.py
apps/api/tests/: test_ai_classifier.py  test_api.py  test_classifier.py
apps/web/: .dockerignore  .env.local.example  .gitignore  Dockerfile  instrumentation.ts.example  middleware.ts  next.config.mjs  package-lock.json  package.json  playwright.config.ts  sentry.client.config.ts.example  sentry.edge.config.ts.example  sentry.server.config.ts.example  tailwind.config.ts  tsconfig.tsbuildinfo
apps/web/app/: error.tsx  globals.css  layout.tsx
apps/web/app/(app)/: error.tsx  (+2 more)
apps/web/lib/: api-errors.ts  audit.ts  env.ts  format.ts  logger.ts  rate-limit.ts
apps/web/scripts/: bulk-import.mjs  seed-assignments.mjs  test-legacy-excel.mjs
apps/web/supabase/: config.toml.example
apps/web/types/: domain.ts
deploy/: .env.example  .gitignore  Caddyfile  README.md  docker-compose.yml  init.sh
deploy/volumes/: kong.yml
docs/: 01-architecture.md  02-data-model.md  03-business-logic.md  04-pdf-parsing.md  05-api-spec.md  06-ui-spec.md  07-excel-export.md  08-roadmap.md  09-ai-classification.md  10-cost-optimization.md  12-operations.md  README.md
docs/reference/: invoice-tool-analysis.md  sample-data.md
(+72 files in other folders)
