[project]
name = "invoice-saas-api"
version = "0.1.0"
requires-python = ">=3.11"
# requirements.txt と厳密に一致させること (Docker は requirements.txt を使用)。
# AI 分類は anthropic SDK ではなく httpx で直接呼ぶため anthropic は不要。
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "pdfplumber==0.10.0",
    "Pillow==10.3.0",
    "pydantic==2.7.0",
    "pydantic-settings==2.2.0",
    "python-multipart==0.0.9",
    "httpx==0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.0",
    "pytest-asyncio==0.23.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
